--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(GraphSpMultstep)
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(include)
+include_directories(test)
 
 file(GLOB SOURCES "src/*.cpp")
 
